--- a/styles/app.css
+++ b/styles/app.css
@@ -142,7 +142,16 @@ table {
 @tailwind utilities;
 
 pre {
+  --night-owl-background: #011627;
+  --line-hightlight: hsl(160deg 90% 50%);
+}
+
+pre {
   overflow: auto;
+  position: relative;
+  font-size: 0.875rem;
+  line-height: 1.7em;
+  padding: 2rem 0;
 }
 
 pre code {
@@ -150,7 +159,7 @@ pre code {
   min-width: 100%;
 }
 
-pre [data-line-number]::before {
+pre [data-line-number]:before {
   content: attr(data-line-number);
   display: inline-block;
   position: sticky;
@@ -158,7 +167,7 @@ pre [data-line-number]::before {
   width: 3.5rem;
   padding-right: 1.5rem;
   text-align: right;
-  background-color: #011627;
+  background-color: var(--night-owl-background);
   color: rgba(230, 230, 230, 0.3);
 }
 
@@ -168,14 +177,27 @@ pre .codeblock-line {
   padding-right: 1.5rem;
 }
 
-pre .codeblock-line[data-hightlight]::before {
-  border-left: 3px solid hotpink;
+pre .codeblock-line[data-hightlight]:before {
+  border-left: 3px solid var(--line-hightlight);
 }
 
-pre .codeblock-line[data-hightlight]::after {
+pre .codeblock-line[data-hightlight]:after {
   content: " ";
   position: absolute;
   inset: 0;
-  background-color: hotpink;
-  filter: opacity(0.2);
+  background-color: var(--line-hightlight);
+  filter: opacity(0.1);
+}
+
+pre[data-lang]:after {
+  content: attr(data-lang);
+  position: sticky;
+  display: inline-block;
+  right: 0;
+  font-size: 0.7rem;
+  opacity: 0.7;
+  transform: translate(-24px, 26px);
+  width: 200px;
+  margin-left: -200px;
+  text-align: right;
 }
